<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Inglés Aventurero</string>
  <string name="aceptar">Aceptar</string>
  <string name="close_eng">Close</string>
  <string name="close_spn">Cerrar</string>
  <string name="EngCancel">Cancel</string>
  <string name="SpnCancel">Cancelar</string>
  <string name="confirmar">Confirmar</string>
  <string name="ok">Ok</string>
  <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
  <string name="azbanner_ad_unit_id">ca-app-pub-2023164965182296/9342420766</string>
...
  <string name="download_again_spn">Por favor intente descargar la escena de nuevo.</string>
  <string name="scroll_to_next_page_eng">Scroll To Next Page</string>
  <string name="scroll_to_next_page_spn">Desplácese A La Página Siguiente</string>
  <string name="understood_eng">I understood:</string>
  <string name="understood_spn">Entendí:</string>
  <string name="already_completed_page_eng">Your answer didn\'t match any response, but since you\'ve already completed the page, just scroll to the next page."</string>
  <string name="already_completed_page_spn">"Su respuesta no coincide con ninguna respuesta, pero como ya ha completado la página, vaya a la página siguiente."</string>
  <string name="notification_eng">Notification</string>
  <string name="notification_spn">Notificación</string>
  <string name="picture_copy_right_info_eng">Each page has a picture which is comprised of one or more images from artists. Respect their licensing requirements.</string>
  <string name="picture_copy_right_info_spn">Cada página tiene una imagen que se compone de una o más imágenes de artistas. Respete los requisitos de las licencias de los artistas.</string>
  <string name="copyright_eng">Picture\'s Copyright Information</string>
  <string name="copyright_spn">Información De Derechos Sobre La Imagen</string>
...
