<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/dialog_ll">
  <TextView
    style="@style/dialog_title"
    android:id="@+id/title"/>
  <ScrollView
    style="@style/dialog_scroll_view">
    <LinearLayout
      style="@style/dialog_inner_ll">
   <TextView
     style="@style/dialog_tiny_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:textColor="@color/greyText"
     android:id="@+id/incorrect_response_label"/>
    <TextView
      style="@style/dialog_tiny_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="2dp"
      android:textColor="@color/dark_text"
      android:id="@+id/incorrect_response"/>
   <TextView
     style="@style/dialog_tiny_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:textColor="@color/greyText"
     android:id="@+id/already_matched"/>
  </LinearLayout>
  </ScrollView>
  <include layout="@layout/dialog_two_buttons"/>
</LinearLayout>
		